--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+   
+   <script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const iframe = document.querySelector('iframe');
+    iframe.addEventListener('load', () => {
+      window.scrollTo(0, 0); // Pastikan halaman tetap di atas
+    });
+  });
+</script>
 
 </head>
 
@@ -92,7 +100,8 @@
 
                     <div class="modal fade" id="KependudukanModal" tabindex="-1" aria-labelledby="KependudukanModal"
                         aria-hidden="true">
-                        <div class="modal-dialog modal-lg"> <!-- Ubah modal-lg menjadi modal-sm -->
+                        <div class="modal-dialog" style="max-width: 80%;">
+                        <!-- <div class="modal-dialog modal-xl"> Ubah modal-lg menjadi modal-sm -->
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="KependudukanModal">Data Peenduduk Kampung Tanuragan Rt 04 Rw 07</h5>
@@ -178,7 +187,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Formulir</h5>
                             <p class="card-text">Isi formulir kependudukan secara online dengan mudah.</p>
-                            <a href="database/formulir/index.html" class="btn btn-primary">Isi Formulir</a>
+                            <a href="database/form/index.html" class="btn btn-primary">Isi Formulir</a>
                         </div>
                     </div>
                 </div>
@@ -192,8 +201,8 @@
                     <h2 class="text-center mb-4">Jadwal Ronda</h2>
                     <div class="card mb-4">
                         <iframe
-                            src="https://docs.google.com/spreadsheets/d/1ZdEe2sqgzYFI2fkLttblJ2qSQSGGgGTLCw1JG-CpzaU/edit?usp=drive_link"
-                            style="border: 0" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
+                            src="https://docs.google.com/spreadsheets/d/1pFEyH8b-LsNrJBZcwSNxzu8oLqVx8EtM/edit?usp=sharing&ouid=110729972272345525278&rtpof=true&sd=true"
+                            style="border: 0" width="100%" height="500" frameborder="0" scrolling="no"></iframe>></iframe>
                         </iframe>
                     </div>
                 </div>
