--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <h2 class="text-center mb-4">Jadwal Ronda</h2>
                     <div class="card mb-4">
                         <iframe
-                            src="https://docs.google.com/spreadsheets/d/1pFEyH8b-LsNrJBZcwSNxzu8oLqVx8EtM/edit?usp=sharing&ouid=110729972272345525278&rtpof=true&sd=true"
+                            src=""
                             style="border: 0" width="100%" height="500" frameborder="0" scrolling="no"></iframe>></iframe>
                         </iframe>
                     </div>
